[package]
name = "game_of_life_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.31"
image = "0.24.7"
js-sys = "0.3.64"
rayon = "1.8.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"


[dependencies.web-sys]
version = "0.3.64"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
  'HtmlParagraphElement',
  'HtmlButtonElement',
]

[build]
rustflags = [
  '--max-memory=4294967296'
]
